# aoc2024

./: .gitignore  README.md  alias.sh  aoc2024.opam  dune-project  shell.nix
lib/: d1.ml  d2.ml  d3.ml  dune  read_input.ml
test/: dune  test_aoc2024.ml
