(lang dune 3.16)

(name aoc2024)

(generate_opam_files true)

(source
 (github ekrall1/aoc2024))

(authors "Eric Krall")

(maintainers "Eric Krall")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2024)
 (synopsis "AOC2024 project")
 (description "AOC2024 project")
 (depends ocaml dune)
 (tags
  ("ocaml" "advent-of-code" "nixos"))
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
